blue-green-deployment/blue/blue-deployment.yaml
# v1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
    version: blue
  name: blue-deployment
  annotations:
    kubernetes.io/change-cause: "Initail Demo application"
    kubernetes.io/description: "Blue-Green Demo Blue application"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
      version: blue
  template:
    metadata:
      labels:
        app: demo
        version: blue
    spec:
      containers:
      - image: nationminu/blue:v1
        name: demo
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /version.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
