blue-green-deployment/blue/ingress.yaml
# ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blue-green.handle.local
    http:
      paths:
      - backend:
          service:
            name: blue-green-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
